--- a/index.html
+++ b/index.html
@@ -370,23 +370,28 @@
               </div>
 
               <div id="frammenti-container">
-                <div id="frammenti-writing">
-                <span>
-                  Frammenti
-                </span>
-                  <div id="frammenti-writing-underlying-lines">
+                <div class="flex-row-container" id="frammenti-logo-pfp-and-article-container">
+                  <div class="flex-column-container" id="frammenti-logo-container">
+                    <p id="frammenti-writing">
+                      Frammenti
+                    </p>
+                    <figure id="frammenti-writing-underlying-lines">
+                      <img src="img/Four_Horizontal_Lines.png" alt="quattro linee orizzontali"
+                      id="frammenti-writing-underlying-lines-img">
+                    </figure>
                   </div>
-                </div>
-                <figure>
-                  <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp">
-                </figure>
-                <div id="frammenti-title-and-attribution">
-                  <h4>
-                    Lorem ipsum dolor sit amet
-                  </h4>
-                  <span class="attribution-colour-and-font-style">
-                  di Lorem Ipsum
-                </span>
+                  <figure id="frammenti-pfp-figure">
+                    <img src="img/Cicero_Placeholder_Square.png" alt="placeholder" class="pfp-border-radius"
+                    id="frammenti-pfp">
+                  </figure>
+                  <div id="frammenti-title-and-attribution">
+                    <h3 id="frammenti-article-title">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing
+                    </h3>
+                    <p class="attribution-colour-and-font-style">
+                      di Lorem Ipsum
+                    </p>
+                  </div>
                 </div>
                 <figure id="frammenti-hourglass-figure">
                   <img src="img/Hourglass.png" alt="hourglass" id="frammenti-hourglass-img">
@@ -574,14 +579,14 @@
 
               <div id="editoriali-commenti">
               <span>
-                EDITORIALI <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp"> COMMENTI
+                EDITORIALI <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp-border-radius"> COMMENTI
               </span>
                 <div>
                   <hr>
                 </div>
 
                 <div class="editoriali-commenti-comment">
-                  <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp">
+                  <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp-border-radius">
                   <div class="editoriali-commenti-comment-title-and-author">
                     <h4>
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -593,7 +598,7 @@
                 </div>
 
                 <div class="editoriali-commenti-comment">
-                  <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp">
+                  <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp-border-radius">
                   <div class="editoriali-commenti-comment-title-and-author">
                     <h4>
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -605,7 +610,7 @@
                 </div>
 
                 <div class="editoriali-commenti-comment">
-                  <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp">
+                  <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp-border-radius">
                   <div class="editoriali-commenti-comment-title-and-author">
                     <h4>
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -617,7 +622,7 @@
                 </div>
 
                 <div class="editoriali-commenti-comment">
-                  <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp">
+                  <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp-border-radius">
                   <div class="editoriali-commenti-comment-title-and-author">
                     <h4>
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -835,13 +840,13 @@
 
         <section id="blog-e-rubriche">
         <span>
-          BLOG <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp"> RUBRICHE
+          BLOG <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp-border-radius"> RUBRICHE
         </span>
 
           <div class="three-columns-container">
             <div class="three-columns-column">
               <div class="editoriali-commenti-comment">
-                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp">
+                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp-border-radius">
                 <div class="editoriali-commenti-comment-title-and-author">
                   <h4>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -853,7 +858,7 @@
               </div>
 
               <div class="editoriali-commenti-comment">
-                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp">
+                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp-border-radius">
                 <div class="editoriali-commenti-comment-title-and-author">
                   <h4>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -865,7 +870,7 @@
               </div>
 
               <div class="editoriali-commenti-comment">
-                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp">
+                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp-border-radius">
                 <div class="editoriali-commenti-comment-title-and-author">
                   <h4>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -888,7 +893,7 @@
               </div>
 
               <div class="editoriali-commenti-comment">
-                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp">
+                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp-border-radius">
                 <div class="editoriali-commenti-comment-title-and-author">
                   <h4>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -900,7 +905,7 @@
               </div>
 
               <div class="editoriali-commenti-comment">
-                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp">
+                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp-border-radius">
                 <div class="editoriali-commenti-comment-title-and-author">
                   <h4>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -914,7 +919,7 @@
 
             <div class="three-columns-column">
               <div class="editoriali-commenti-comment">
-                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp">
+                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp-border-radius">
                 <div class="editoriali-commenti-comment-title-and-author">
                   <h4>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -926,7 +931,7 @@
               </div>
 
               <div class="editoriali-commenti-comment">
-                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp">
+                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp-border-radius">
                 <div class="editoriali-commenti-comment-title-and-author">
                   <h4>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -938,7 +943,7 @@
               </div>
 
               <div class="editoriali-commenti-comment">
-                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp">
+                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp-border-radius">
                 <div class="editoriali-commenti-comment-title-and-author">
                   <h4>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
