Rifinita zona tre articoli

--- a/index.html
+++ b/index.html
@@ -398,44 +398,66 @@
                 </figure>
               </div>
 
-              <div class="three-columns-container">
-                <div class="three-articles-article-container">
-                  <p>Lorem ipsum</p>
-                  <article>
-                    <figure>
-                      <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
-                    </figure>
-                    <h3>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
-                    </h3>
-                  </article>
-                  <p>di Lorem Ipsum</p>
+              <div id="three-articles-top-top-writing-bar-container" class="flex-column-container">
+                <p id="three-articles-top-top-writing">
+                  LOREM IPSUM
+                </p>
+                <div id="three-articles-bar-after-top-top-writing">
                 </div>
+                <div class="three-columns-container" id="three-articles-container">
+                  <div class="three-articles-article-container">
+                    <p class="top-writing-styling">
+                      LOREM IPSUM
+                    </p>
+                    <article>
+                      <figure>
+                        <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder"
+                        class="three-articles-article-img">
+                      </figure>
+                      <h3 class="three-articles-article-title">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                      </h3>
+                    </article>
+                    <p class="attribution-font-size attribution-colour-and-font-style">
+                      di Lorem Ipsum
+                    </p>
+                  </div>
 
-                <div class="three-articles-article-container">
-                  <p>Lorem ipsum</p>
-                  <article>
-                    <figure>
-                      <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
-                    </figure>
-                    <h3>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
-                    </h3>
-                  </article>
-                  <p>di Lorem Ipsum</p>
-                </div>
+                  <div class="three-articles-article-container">
+                    <p class="top-writing-styling">
+                      LOREM IPSUM
+                    </p>
+                    <article>
+                      <figure>
+                        <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder"
+                             class="three-articles-article-img">
+                      </figure>
+                      <h3 class="three-articles-article-title">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                      </h3>
+                    </article>
+                    <p class="attribution-font-size attribution-colour-and-font-style">
+                      di Lorem Ipsum
+                    </p>
+                  </div>
 
-                <div class="three-articles-article-container">
-                  <p>Lorem ipsum</p>
-                  <article>
-                    <figure>
-                      <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
-                    </figure>
-                    <h3>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
-                    </h3>
-                  </article>
-                  <p>di Lorem Ipsum</p>
+                  <div class="three-articles-article-container">
+                    <p class="top-writing-styling">
+                      LOREM IPSUM
+                    </p>
+                    <article>
+                      <figure>
+                        <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder"
+                             class="three-articles-article-img">
+                      </figure>
+                      <h3 class="three-articles-article-title">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                      </h3>
+                    </article>
+                    <p class="attribution-font-size attribution-colour-and-font-style">
+                      di Lorem Ipsum
+                    </p>
+                  </div>
                 </div>
               </div>
 
