Rifinita zona quattro articoli a quadrato

--- a/index.html
+++ b/index.html
@@ -462,48 +462,49 @@
               </div>
 
               <!--todo rinomina le classi dei tag-->
-              <div id="four-articles-in-a-square">
-                <div id="four-articles-in-a-square-upper-articles">
-                  <div id="four-articles-in-a-square-upper-articles-left-article-container"
-                       class="coupled-articles-article-container">
-                  <span class="top-writing-styling">
-                    LOREM IPSUM
-                  </span>
-                    <h2>
+              <div class="flex-column-container" id="four-articles-in-a-square">
+                <div class="flex-row-container" id="four-articles-in-a-square-upper-articles">
+                  <div class="coupled-articles-article-container four-articles-left-article-container
+                  four-articles-article-container"
+                  id="four-articles-in-a-square-upper-articles-left-article-container">
+                    <p class="top-writing-styling">
+                      LOREM IPSUM
+                    </p>
+                    <h2 class="four-articles-article-title">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
                     </h2>
                     <div class="coupled-articles-image-and-comment-container">
-                      <figure>
-                        <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+                      <figure class="four-articles-figure">
+                        <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="four-articles-img">
                       </figure>
                       <div class="coupled-articles-image-comment-container">
-                    <span class="attribution-colour-and-font-style">
-                      di Lorem Ipsum
-                    </span>
-                        <p>
+                        <p class="attribution-colour-and-font-style attribution-font-size four-articles-attribution">
+                          di Lorem Ipsum
+                        </p>
+                        <p class="four-articles-paragraph">
                           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
                         </p>
                       </div>
                     </div>
                   </div>
 
-                  <div id="four-articles-in-a-square-upper-articles-right-article-container"
-                       class="coupled-articles-article-container">
-                  <span class="top-writing-styling">
-                    LOREM IPSUM
-                  </span>
-                    <h2>
+                  <div class="coupled-articles-article-container four-articles-right-article-container"
+                  id="four-articles-in-a-square-upper-articles-right-article-container">
+                    <p class="top-writing-styling">
+                      LOREM IPSUM
+                    </p>
+                    <h2 class="four-articles-article-title">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
                     </h2>
                     <div class="coupled-articles-image-and-comment-container">
-                      <figure>
-                        <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+                      <figure class="four-articles-figure">
+                        <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="four-articles-img">
                       </figure>
                       <div class="coupled-articles-image-comment-container">
-                    <span class="attribution-colour-and-font-style">
-                      di Lorem Ipsum
-                    </span>
-                        <p>
+                        <p class="attribution-colour-and-font-style attribution-font-size four-articles-attribution">
+                          di Lorem Ipsum
+                        </p>
+                        <p class="four-articles-paragraph">
                           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
                         </p>
                       </div>
@@ -511,47 +512,47 @@
                   </div>
                 </div>
 
-                <div id="four-articles-in-a-square-lower-articles">
+                <div class="flex-row-container" id="four-articles-in-a-square-lower-articles">
                   <div id="four-articles-in-a-square-lower-articles-left-article-container"
-                       class="coupled-articles-article-container">
-                  <span class="top-writing-styling">
-                    LOREM IPSUM
-                  </span>
-                    <h2>
+                  class="coupled-articles-article-container four-articles-left-article-container">
+                    <p class="top-writing-styling">
+                      LOREM IPSUM
+                    </p>
+                    <h2 class="four-articles-article-title">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
                     </h2>
                     <div class="coupled-articles-image-and-comment-container">
-                      <figure>
-                        <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+                      <figure class="four-articles-figure">
+                        <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="four-articles-img">
                       </figure>
                       <div class="coupled-articles-image-comment-container">
-                    <span>
-                      di Lorem Ipsum
-                    </span>
-                        <p>
+                        <p class="attribution-colour-and-font-style attribution-font-size four-articles-attribution">
+                          di Lorem Ipsum
+                        </p>
+                        <p class="four-articles-paragraph">
                           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
                         </p>
                       </div>
                     </div>
                   </div>
 
-                  <div id="four-articles-in-a-square-lower-articles-right-article-container"
-                       class="coupled-articles-article-container">
-                  <span class="top-writing-styling">
-                    LOREM IPSUM
-                  </span>
-                    <h2>
+                  <div class="coupled-articles-article-container four-articles-right-article-container"
+                  id="four-articles-in-a-square-lower-articles-right-article-container">
+                    <p class="top-writing-styling">
+                      LOREM IPSUM
+                    </p>
+                    <h2 class="four-articles-article-title">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
                     </h2>
                     <div class="coupled-articles-image-and-comment-container">
-                      <figure>
-                        <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+                      <figure class="four-articles-figure">
+                        <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="four-articles-img">
                       </figure>
                       <div class="coupled-articles-image-comment-container">
-                    <span>
-                      di Lorem Ipsum
-                    </span>
-                        <p>
+                        <p class="attribution-colour-and-font-style attribution-font-size four-articles-attribution">
+                          di Lorem Ipsum
+                        </p>
+                        <p class="four-articles-paragraph">
                           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
                         </p>
                       </div>
@@ -560,6 +561,7 @@
                 </div>
               </div>
             </div>
+
             <div  class="right-container">
               <div id="corriere-tv-right-first-article">
                 <div id="corriere-tv-right-first-article-top-bar">
