Rifinito secondo articolo sulla destra

--- a/index.html
+++ b/index.html
@@ -585,33 +585,40 @@
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
                   </h2>
                 </article>
-                <p class="paragraph-after-attribution" id="corriere-tv-right-first-article-paragraph">
+                <p class="paragraph-after-attribution paragraph-after-attribution-font-size"
+                id="corriere-tv-right-first-article-paragraph">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 </p>
               </div>
 
               <div id="corriere-tv-right-second-article">
                 <div id="corriere-tv-right-second-article-top-bar">
-                  <span class="corriere-tv-blue-box-writing">
-                    <b><i>CORRIERE</i><span class="tv-color">TV</span></b>
-                  </span>
+                  <p class="corriere-tv-blue-box-writing">
+                    CORRIERE<span class="tv-styling-right">TV</span>
+                  </p>
                 </div>
 
                 <article>
-                  <img src="img/Cicero_Corriere_Tv_Right_Side_Main_Articles.png" alt="placeholder">
-                  <h2>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
-                  </h2>
+                  <img src="img/Cicero_Corriere_Tv_Right_Side_Main_Articles.png" alt="placeholder"
+                  class="right-side-full-width-img">
+                  <div class="corriere-tv-right-second-article-text-container">
+                    <h2 id="corriere-tv-right-second-article-title">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                    </h2>
+                    <p class="paragraph-after-attribution paragraph-after-attribution-font-size"
+                    id="corriere-tv-right-second-article-paragraph">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    </p>
+                  </div>
                 </article>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </p>
+
+
               </div>
 
               <div id="editoriali-commenti">
-              <span>
-                EDITORIALI <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp-border-radius"> COMMENTI
-              </span>
+                <span>
+                  EDITORIALI <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp-border-radius"> COMMENTI
+                </span>
                 <div>
                   <hr>
                 </div>
@@ -665,19 +672,19 @@
                 </div>
               </div>
 
-              <div class="generic-article-container">
-                <div class="three-articles-article-container">
-                  <p>Lorem ipsum</p>
-                  <article>
-                    <figure>
-                      <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
-                    </figure>
-                    <h3>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
-                    </h3>
-                  </article>
-                  <p>di Lorem Ipsum</p>
-                </div>
+              <div class="right-generic-article-container">
+                <p class="top-writing-styling generic-right-article-top-writing">
+                  LOREM IPSUM
+                </p>
+                <article class="generic-article-space-before-attribution">
+                  <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="right-side-full-width-img">
+                  <h3 class="generic-article-title">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                  </h3>
+                </article>
+                <p class="attribution-font-size attribution-colour-and-font-style">
+                  di Lorem Ipsum
+                </p>
               </div>
             </div>
           </div>
