Rifinita zona editoriali & commenti

--- a/index.html
+++ b/index.html
@@ -611,61 +611,62 @@
                     </p>
                   </div>
                 </article>
-
-
               </div>
 
               <div id="editoriali-commenti">
-                <span>
-                  EDITORIALI <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp-border-radius"> COMMENTI
+                <span class="flex-row-container" id="editoriali-commenti-writing">
+                  EDITORIALI <img src="img/And_Symbol.png" alt="placeholder" class="pfp-border-radius"> COMMENTI
                 </span>
-                <div>
-                  <hr>
-                </div>
+                <img src="img/Four_Horizontal_Lines.png" alt="quattro linee orizzontali"
+                class="four-underlying-lines-img">
 
                 <div class="editoriali-commenti-comment">
-                  <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp-border-radius">
+                  <img src="img/Cicero_Placeholder_Square.png" alt="placeholder"
+                  class="pfp-border-radius editoriali-commenti-pfp">
                   <div class="editoriali-commenti-comment-title-and-author">
-                    <h4>
+                    <h4 class="editoriali-commenti-title">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </h4>
-                    <p>
+                    <p class="attribution-colour-and-font-style attribution-font-size editoriali-commenti-attribution">
                       di Lorem Ipsum
                     </p>
                   </div>
                 </div>
 
                 <div class="editoriali-commenti-comment">
-                  <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp-border-radius">
+                  <img src="img/Cicero_Placeholder_Square.png" alt="placeholder"
+                  class="pfp-border-radius editoriali-commenti-pfp">
                   <div class="editoriali-commenti-comment-title-and-author">
-                    <h4>
+                    <h4 class="editoriali-commenti-title">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </h4>
-                    <p>
+                    <p class="attribution-colour-and-font-style attribution-font-size editoriali-commenti-attribution">
                       di Lorem Ipsum
                     </p>
                   </div>
                 </div>
 
                 <div class="editoriali-commenti-comment">
-                  <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp-border-radius">
+                  <img src="img/Cicero_Placeholder_Square.png" alt="placeholder"
+                  class="pfp-border-radius editoriali-commenti-pfp">
                   <div class="editoriali-commenti-comment-title-and-author">
-                    <h4>
+                    <h4 class="editoriali-commenti-title">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </h4>
-                    <p>
+                    <p class="attribution-colour-and-font-style attribution-font-size editoriali-commenti-attribution">
                       di Lorem Ipsum
                     </p>
                   </div>
                 </div>
 
                 <div class="editoriali-commenti-comment">
-                  <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp-border-radius">
-                  <div class="editoriali-commenti-comment-title-and-author">
-                    <h4>
+                  <img src="img/Cicero_Placeholder_Square.png" alt="placeholder"
+                  class="pfp-border-radius editoriali-commenti-pfp">
+                  <div>
+                    <h4 class="editoriali-commenti-title">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </h4>
-                    <p>
+                    <p class="attribution-colour-and-font-style attribution-font-size editoriali-commenti-attribution">
                       di Lorem Ipsum
                     </p>
                   </div>
